:bug: Fix EditListForm Background-color When list.color Updated with PaletteColor + Fix z-index PaletteColor

--- a/src/components/modals/addListForm/AddListForm.module.scss
+++ b/src/components/modals/addListForm/AddListForm.module.scss
@@ -21,7 +21,7 @@
     align-items: center;
     width: 80%;
     max-width: 600px;
-    background-color: $white;
+    background-color: $background;
     border: 1px solid $black;
     box-shadow: $shadow;
     opacity: 0;
