--- a/src/components/modals/paletteColor/PaletteColor.module.scss
+++ b/src/components/modals/paletteColor/PaletteColor.module.scss
@@ -3,7 +3,7 @@
 
 .form {
   position: absolute;
-  z-index: 999999999999;
+  z-index: 2;
   bottom: -55px;
   width: 238px;
   background-color: $white;
